ChangeLog of JSch
====================================================================
Last modified: Tue Apr 22 14:35:13 UTC 2008

	
Changes since version 0.1.37:			
- bugfix: NPE should not be thrown at unexpeced session drop.  FIXED.
- bugfix: AIOOBE at Session#connect().                         FIXED.
- bugfix: Even if 'true' is given for
	    Channel#setOutputStream(OutputStream out, boolean dontclose)
	  as the second paramter, 'out' will be closed.        FIXED.
- change: 'examples/Sftp.java' has been modified to demonstrate
          ChannelSftp#reaplpath(String path)
- change: setEnv(Hashtable env) for exec and shell channels have been
	  marked as @deprecated
- feature: setEnv(String name, String value) has been added to exec
	   and shell channels.
- feature: setEnv(byte[] name, byte[] value) has been added to exec
	   and shell channels.
- feature: ChannelSftp#realpath(String path) has been added.
- feature: ChannelExec#setCommand(byte[] command) has been added.
- feature: com.jcraft.jsch.ChannelSftp.LsEntry has implemented
	   java.lang.Comparable
- feature: Session#getServerAliveInterval(), Session#getServerAliveCountMaX()
	   have been added.


Changes since version 0.1.36:			
- bugfix: some sftpd will send invalid data in sftp protocol 
          point of view, and we need to work around such data. FIXED.
- bugfix: the stream forwarding had been broken since 0.1.30.  FIXED.
- bugfix: failed to detect 'SSH_MSG_CHANNEL_OPEN_FAILURE'.     FIXED.
- bugfix: ChannelSftp will generate the unfavorable absolute pathname
	  in some case.                                        FIXED.
- bugfix: failed to ignore the invalid public-key file.        FIXED.
- change: ignoring empty data sent by 'SSH_MSG_CHANNEL_DATA' and
           'SSH_MSG_CHANNEL_EXTENDED_DATA'.
- change: updating copyright messages; 2007 -> 2008
- change: build.xml will enable 'javac.debug' option by the default.
- change: added logging messages to IndentityFile and Session class.