@@ -36,10 +36,11 @@ public class ChannelExec extends ChannelSession{
   byte[] command=new byte[0];
 
   public void start() throws JSchException{
+    Session _session=getSession();
     try{
       sendRequests();
       Request request=new RequestExec(command);
-      request.request(session, this);
+      request.request(_session, this);
     }
     catch(Exception e){
       if(e instanceof JSchException) throw (JSchException)e;
@@ -50,9 +51,9 @@ public class ChannelExec extends ChannelSession{
 
     if(io.in!=null){
       thread=new Thread(this);
-      thread.setName("Exec thread "+session.getHost());
-      if(session.daemon_thread){
-        thread.setDaemon(session.daemon_thread);
+      thread.setName("Exec thread "+_session.getHost());
+      if(_session.daemon_thread){
+        thread.setDaemon(_session.daemon_thread);
       }
       thread.start();
     }
@@ -65,9 +66,9 @@ public class ChannelExec extends ChannelSession{
     this.command=command;
   }
 
-  public void init(){
-    io.setInputStream(session.in);
-    io.setOutputStream(session.out);
+  void init() throws JSchException {
+    io.setInputStream(getSession().in);
+    io.setOutputStream(getSession().out);
   }
 
   public void setErrStream(java.io.OutputStream out){
