@@ -39,18 +39,19 @@ public class ChannelSubsystem extends ChannelSession{
   public void setWantReply(boolean foo){ want_reply=foo; }
   public void setSubsystem(String foo){ subsystem=foo; }
   public void start() throws JSchException{
+    Session _session=getSession();
     try{
       Request request;
       if(xforwading){
         request=new RequestX11();
-        request.request(session, this);
+        request.request(_session, this);
       }
       if(pty){
 	request=new RequestPtyReq();
-	request.request(session, this);
+	request.request(_session, this);
       }
       request=new RequestSubsystem();
-      ((RequestSubsystem)request).request(session, this, subsystem, want_reply);
+      ((RequestSubsystem)request).request(_session, this, subsystem, want_reply);
     }
     catch(Exception e){
       if(e instanceof JSchException){ throw (JSchException)e; }
@@ -60,18 +61,19 @@ public class ChannelSubsystem extends ChannelSession{
     }
     if(io.in!=null){
       thread=new Thread(this);
-      thread.setName("Subsystem for "+session.host);
-      if(session.daemon_thread){
-        thread.setDaemon(session.daemon_thread);
+      thread.setName("Subsystem for "+_session.host);
+      if(_session.daemon_thread){
+        thread.setDaemon(_session.daemon_thread);
       }
       thread.start();
     }
   }
-  //public void finalize() throws Throwable{ super.finalize(); }
-  public void init(){
-    io.setInputStream(session.in);
-    io.setOutputStream(session.out);
+
+  void init() throws JSchException {
+    io.setInputStream(getSession().in);
+    io.setOutputStream(getSession().out);
   }
+
   public void setErrStream(java.io.OutputStream out){
     setExtOutputStream(out);
   }
